# spotify-statistics

./: .gitignore  README.md  data_crunching.py  db_documentation.md  index.css  index.html  index.js  pyproject.toml  requirements.txt
assets/: avg_hours_played_per_month.json  avg_hours_played_per_year.json  avg_play_count_per_song_yearly.json  avg_track_length_monthly.json  cumulative_percent_play_count_artist.json  most_played_albums_total.json  most_played_artists_track_album_monthly.json  most_played_tracks_total_reason_start_clickrow.json  play_count_distribution.json  plays_per_county_total.json  single_values.json  top_songs_of_top_artists.json
src/: add_refeshtoken_to_env.py  create_db.py  enrich_with_internet_data.py  examples.ipynb  get_spotify_data.py  getting_started.ipynb  update_spotify_bearer.py  util.py
website/: data_crunching.py  index.js
website/assets/: avg_hours_played_per_day_name.json  avg_hours_played_per_year_month.json  cumulative_percent_play_count_track.json  hours_played_percent_per_hour_of_the_day.json  most_played_artists_total.json  most_played_tracks_total.json  yearly_track_play_count.json
